--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Mizakson",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   }
 }
