--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@babel/core": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
