Add webpack build script to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Odin Project JavaScript Course Final Project",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack"
   },
   "author": "Mizakson",
   "license": "ISC",
