--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@babel/core": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "babel-jest": "^29.7.0",
+    "css-loader": "^7.1.2",
     "jest": "^29.7.0",
+    "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
