--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.24.6",
     "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
